--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
 .App {
-  text-align: center;
+  border: 1px solid rgb(142, 142, 142);
+  border-radius: 5px;
+  width: 550px;
+  margin: 120px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo_body {
+  padding: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo_items {
+  border: 1px solid rgb(142, 142, 142);
+  margin-top: 15px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo_items > div:nth-child(even) {
+  background: rgb(218, 218, 218);
 }
