--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,17 @@
 .todo_items > div:nth-child(even) {
   background: rgb(218, 218, 218);
 }
+.add-todo{
+  text-align: center;
+  padding: 15px;
+  color: rgb(143, 143, 143);
+}
+.preloader{
+  /* width: 259px; */
+  display: flex;
+  justify-content: center;
+}
+.preloader > img{
+  margin-top: 250px;
+  width: 250px;
+}
